
// adit_srv/proto/adit_srv.proto
syntax = "proto3";

package ADIT_SRV;

service AditeService {
  rpc FindOne (AditById) returns (Adit) {}
  rpc CreateOne (AditCreate) returns (AditById) {}
  rpc UpdateOne (AditUpdate) returns (AditUpdateStatus) {}
  rpc ChangeStatus (AditChangeStatus) returns (AditUpdateStatus) {}
  rpc DeleteOne (AditById) returns (AditUpdateStatus) {}
}

message AditById {
  string id = 1;
}

message Adit {
  string id = 1;
  string name = 2;
  string email = 3;
  bool status = 4;
  string locId = 5;
  string orgId = 6;
}

message AditCreate {
  string name = 1;
  string email = 2;
}

message AditUpdate {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool status = 4;
}

message AditChangeStatus {
  string id = 1;
  bool status = 2;
}

message AditUpdateStatus {
  bool status = 1;
}
